k8s/mongo-statefulset.yaml
# mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: prod
spec:
  ports:
  - port: 27017
    name: mongo
  clusterIP: None
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: prod
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
      - name: mongo
        image: mongo:7.0
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: mongo-pvc
          mountPath: /data/db
        args: ["--bind_ip_all"]
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
  volumeClaimTemplates:
  - metadata:
      name: mongo-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
