k8s/namespace.yaml
  # namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod

---
# networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
